<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/general">

        <android.support.v7.preference.Preference
            android:title="@string/my_location"
            android:summary="@string/my_location_summary"
            android:key="my_location">

        </android.support.v7.preference.Preference>
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/notifications">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:title="@string/enable_notifications"
            android:summary="@string/coming_soon"
            android:key="notif"
            android:defaultValue="false">
        </android.support.v7.preference.SwitchPreferenceCompat>

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>