<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".ui.tool.RegisterActivity"
              android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="80dp">

            <com.entropy_factory.activismap.view.BesomTextView
                android:text="ACTIVISMAP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="70dp"/>

            <com.entropy_factory.activismap.view.FontTextView
                android:text="*el mapa de l'activisme en un sol clic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="78dp"
                android:layout_marginStart="78dp"/>
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.entropy_factory.activismap.view.FontEditText
                android:id="@+id/person_name"
                android:layout_width="match_parent"
                android:hint="@string/person_name"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.entropy_factory.activismap.view.FontEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:hint="@string/username"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.entropy_factory.activismap.view.FontEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.entropy_factory.activismap.view.FontEditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.entropy_factory.activismap.view.FontEditText
                android:id="@+id/repassword"
                android:hint="@string/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.entropy_factory.activismap.view.FontButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:fontButton="black"
            android:textColor="@color/white"
            android:background="@drawable/btn_effect_primary_color"/>

        <com.entropy_factory.activismap.view.FontButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:fontButton="black"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_effect_primary_color"/>
    </LinearLayout>


</RelativeLayout>
