<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.entropy_factory.activismap.view.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="\ue8d2"
            android:textSize="25dp"
            android:gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.entropy_factory.activismap.view.FontEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:textColorHint="@color/colorPrimaryHint"
                android:maxLines="1"
                app:fontEditText="bold"
                android:hint="@string/event_title"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/pick"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <ImageView
            android:id="@+id/event_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <com.entropy_factory.activismap.view.FontTextView
            android:id="@+id/pick_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30dp"
            app:font="bold"
            android:gravity="center"
            android:text="@string/pick_image"/>
    </LinearLayout>

    <com.entropy_factory.activismap.view.FontEditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColorHint="@color/colorPrimaryHint"
        android:minLines="3"
        android:maxLines="3"
        android:gravity="top"
        android:hint="@string/event_description"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.entropy_factory.activismap.view.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:font="bold"
            android:text="\ue8df"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center|bottom"
            android:textSize="20sp"
            android:id="@+id/materialTextView"
            android:layout_weight="0.1"/>

        <com.entropy_factory.activismap.view.FontTextView
            android:id="@+id/start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:font="bold"
            android:text="@string/select_start_date"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:layout_weight="0.9"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.entropy_factory.activismap.view.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:font="bold"
            android:text="\ue878"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center|bottom"
            android:textSize="20sp"
            android:layout_weight="0.1"/>

        <com.entropy_factory.activismap.view.FontTextView
            android:id="@+id/end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:font="bold"
            android:text="@string/select_end_date"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:layout_weight="0.9"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.entropy_factory.activismap.view.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:font="bold"
            android:text="\ue55e"
            android:gravity="center"
            android:textSize="28sp"
            android:layout_weight="0.1"/>

        <com.entropy_factory.activismap.view.FontTextView
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:font="bold"
            android:text="@string/select_location"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:layout_weight="0.9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.entropy_factory.activismap.view.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:font="bold"
            android:text="\ue6dd"
            android:gravity="center|bottom"
            android:textSize="28sp"
            android:layout_weight="0.1"/>

        <com.entropy_factory.activismap.view.FontTextView
            android:id="@+id/open_selector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:font="bold"
            android:text="@string/select_event_classification"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:layout_weight="0.9"
            android:visibility="visible"/>

        <com.entropy_factory.activismap.widget.ItemClassificationView
            android:id="@+id/classification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:itemSize="25dp"
            app:itemSpacing="3dp"
            android:layout_weight="0.9"
            android:layout_marginBottom="5dp"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_marginBottom="10dp">

        <com.entropy_factory.activismap.view.FontButton
            android:id="@+id/create_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_effect_primary_color"
            android:textColor="@color/white"
            app:fontButton="bold"
            android:text="Crear Actividad"/>
    </LinearLayout>



</LinearLayout>